--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   </style>
 </head>
 <body>
-  <h1>Hai 😄</h1>
+  <h1>Hai sayangggg kuuuu</h1>
   <p>Aku cuma mau bilang</p>
-  <h2>Kamu orang baik 💖</h2>
+  <h2>Kamu imutttt bangettt 💖</h2>
 
-  <button onclick="alert('Semoga hari kamu menyenangkan 😊')">
+  <button onclick="alert('i love you🤍💐 boleh minta pap ga')">
     Klik aku
   </button>
 </body>
