--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -21,11 +21,11 @@
   </style>
 </head>
 <body>
-  <h1>👇</h1>
+  <h1>bawah</h1>
   <p>Aku cuma mau bilang</p>
-  <h2>👇</h2>
+  <h2>buka</h2>
 
-  <button onclick="alert('kalo kamu masih suka sama aku mah ya gapapa tapi kayak nya kita ga bisa deket lagi aku itu ya di ancam bukan aku aja si tapi keluarga ku juga kena maap ya kalo aku ada salah sama kamu pesan aku: kamu ga boleh gadang ga boleh sampe telat makan tetap jaga kesehatan kamu jangan sampe sakit jangan nangis ya kamu itu kuat maap kalo aku kesan nya tiba tiba kalo kamu masih suka ya gapapa aku juga sama tapi kita ga bisa deket aku ga mau sampai aku kebawa emosi sama yuda aku juga masih punya trauma pas masih sd hampir nge ..... jaga dirimu baik baik ya aku percaya sama kamu ko🥲')">
+  <button onclick="alert('kalo kamu masih suka sama aku mah ya gapapa tapi kayak nya kita ga bisa deket lagi aku itu ya di ancam bukan aku aja si tapi keluarga ku juga kena maap ya kalo aku ada salah sama kamu pesan aku: kamu ga boleh gadang ga boleh sampe telat makan tetap jaga kesehatan kamu jangan sampe sakit jangan nangis ya kamu itu kuat maap kalo aku kesan nya tiba tiba kalo kamu masih suka ya gapapa aku juga sama tapi kita ga bisa deket aku ga mau sampai aku kebawa emosi sama yuda aku juga masih punya trauma pas masih sd hampir nge ..... jaga dirimu baik baik ya aku percaya sama kamu ko :) ( > sedih)')">
     Klik aku
   </button>
 </body>
